--- a/front/src/app/demo/pages/authentication/auth-signin/auth-signin.component.html
+++ b/front/src/app/demo/pages/authentication/auth-signin/auth-signin.component.html
@@ -28,6 +28,8 @@
         <p class="mb-2 text-muted">Forgot password? <a [routerLink]="['/auth/reset-password']">Reset</a></p>
         <p class="mb-0 text-muted">Don’t have an account? <a [routerLink]="['/auth/signup']">Sign up</a></p>
       </div>
+      <button class="btn btn-primary mb-4" (click)="loginAsBoxer()">Login as boxer</button>
+      <button class="btn btn-primary mb-4" (click)="loginAsAdmin()">Login as admin</button>
     </div>
   </div>
 </div>
